--- a/Views/ClockViewController/ClockViewController.storyboard
+++ b/Views/ClockViewController/ClockViewController.storyboard
@@ -114,8 +114,26 @@
                                     <action selector="closeTapped:" destination="tAH-Ij-2NC" eventType="touchUpInside" id="l3J-sg-9JP"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MPs-YA-ZY3" customClass="MBCircularProgressBarView">
+                                <rect key="frame" x="87" y="517" width="240" height="219"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="value">
+                                        <real key="value" value="61"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="progressAngle">
+                                        <real key="value" value="100"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="b15-2T-0IT" firstAttribute="trailing" secondItem="MPs-YA-ZY3" secondAttribute="trailing" constant="87" id="162-e4-pSg"/>
+                            <constraint firstItem="MPs-YA-ZY3" firstAttribute="leading" secondItem="b15-2T-0IT" secondAttribute="leading" constant="87" id="Qqk-8Y-FnS"/>
+                            <constraint firstItem="MPs-YA-ZY3" firstAttribute="top" secondItem="b15-2T-0IT" secondAttribute="top" constant="473" id="ima-AA-xlV"/>
+                            <constraint firstItem="b15-2T-0IT" firstAttribute="bottom" secondItem="MPs-YA-ZY3" secondAttribute="bottom" constant="126" id="xw4-yM-XQ2"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="b15-2T-0IT"/>
                     </view>
                 </viewController>
